ci: add github workflow + set baseURL to github pages

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://benhampson.co.uk/'
+baseURL: 'https://ben-hampson.github.io/'
 languageCode: 'en-gb'
 title: 'Ben Hampson'
 theme: "PaperMod"
