--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://ben-hampson.github.io/'
+baseURL: 'https://ben-hampson.github.io'
 languageCode: 'en-gb'
 title: 'Ben Hampson'
 theme: "PaperMod"
